--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -21,7 +21,7 @@
 .user-component__subtitle {
   margin-top: 8px;
   font-size: 14px;
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.4);
 }
 .user-component__avatar--xl {
   width: 60px;
@@ -37,5 +37,12 @@
   font-weight: 400;
 }
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  color: rgba(0, 0, 0, 0.3);
+}
+.user-component__time {
+  display: block;
+  margin-bottom: 9px;
 }
