--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
 
 /* Screens */
 @import "screens/login.css";
@@ -17,4 +18,7 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #2f363e;
   height: 1000vh;
+}
+.main-screen {
+  padding: 0px var(--horizontal-space);
 }
