--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -14,12 +14,12 @@
 }
 .friends-screen__channel {
   margin-top: 15px;
-  border-top: 1px solid #f1f1f1;
+  border-top: 1px solid var(--main-border);
   padding-top: 13px;
 }
 .friends-screen__channel-header {
   margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--grey);
 }
