--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -21,7 +21,7 @@
 .user-component__subtitle {
   margin-top: 8px;
   font-size: 14px;
-  color: rgba(0, 0, 0, 0.4);
+  color: var(--grey);
 }
 .user-component__avatar--xl {
   width: 60px;
@@ -40,9 +40,12 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  color: rgba(0, 0, 0, 0.3);
+  color: var(--grey);
 }
 .user-component__time {
   display: block;
   margin-bottom: 9px;
+}
+.user-component:last-child span {
+  margin-right: 5px;
 }
